# timestep

./: .actrc  .copier-answers.yml  .deepsource.toml  .dockerignore  .dot.env  .env  .env.example  .env.sample  .envrc  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.bak  .gitmodules  .pre-commit-config.yaml  .terraform.lock.hcl  BUILD  CHANGELOG.md  Caddy.Dockerfile  Caddyfile  DEPLOYMENT.md  DEVELOPMENT_TICKET.md  Dockerfile  Dockerfile.cicd  LICENSE  Makefile  OBJECTIVES.md  Pulumi.dev.yaml  Pulumi.local.yaml  Pulumi.yaml  README.md  SECURITY.md  TODO.md  Tiltfile  VLM_EMBEDDINGS_README.md  VLM_IMAGE_GENERATION_SUMMARY.md  __main__.py  alembic.ini  app.py  appflow.config.json  cdktf.json  (+63 more)
backend/: .gitignore  Makefile  SPEECH_TO_IMAGE_README.md  chat_template.jinja  example_integrated_vlm_stt.py  example_vlm_stt_usage.py  pyproject.toml  run_fine_tuning.py  test_smolvla_integration.py  test_speech_to_image.py  test_utils.py  test_vlm_embeddings.py  unified_message_processor.py
backend/examples/: smolvla_audio_example.py  smolvla_rft_example.py  smolvla_rft_simple_example.py  smolvla_rft_standalone_example.py
backend/src/: sitecustomize.py
backend/src/backend/: logging_config.py  main.py
backend/src/backend/_shared/: __init__.py  database.py
backend/src/backend/_shared/dao/: file_dao.py
backend/src/backend/_shared/models/: file_models.py  model_models.py  upload_models.py
backend/src/backend/_shared/utils/: fine_tuning_utils.py
backend/src/backend/apis/: audio_api.py  chat_api.py  containers_api.py  embeddings_api.py  files_api.py  images_api.py  models_api.py  organization_api.py  realtime_api.py  tts_api.py  uploads_api.py  vector_stores_api.py
backend/src/backend/rft/: environment_grader.py  smolvla_rft_trainer.py  train_rft.py
backend/src/backend/services/: audio_service.py  batches_service.py  chat_service.py  embeddings_service.py  evals_service.py  files_service.py  fine_tuning_service.py  images_service.py  models_service.py  moderations_service.py  organization_service.py  responses_service.py  speech_to_image_service.py  text_image_converter.py  text_image_data.py  text_image_generator.py  text_image_trainer.py  tts_spectrogram_service.py  uploads_service.py  vector_stores_service.py  vlm_image_service.py
backend/src/backend/utils/: data_utils.py  fine_tuning_utils.py  model_utils.py
backend/src/backend/workers/: __init__.py
backend/tests/: test_agents_sdk.py  test_alliance_between_api_and_direct_inference.py  test_apis_with_fine_tuning_for_function_calling.py  test_batches_api.py  test_files_api.py  test_fine_tuning_api.py  test_models_api.py  test_moderations_api.py  test_realtime_api.py  test_responses_api.py  test_smolvla.py  test_smolvla_rft.py  test_spectrogram_tts.py  test_vector_stores_api.py
backend/tests/fixtures/jsonl/: default_vision_validation_data.jsonl  dpo_vision_training_data.jsonl  dpo_vision_validation_data.jsonl  rft_vision_training_data.jsonl  sample.jsonl
src/timestep/agents/action_mask_agent/: README.md  pyproject.toml
src/timestep/agents/action_mask_agent/src/timestep/agents/action_mask_agent/: agent.py
src/timestep/agents/agent/: Dockerfile  agent.py  deployment copy.yaml  prefect.yaml  pyproject.toml
src/timestep/agents/gymnasium_agent/: README.md  pyproject.toml
src/timestep/agents/gymnasium_agent/src/timestep/agents/gymnasium_agent/: agent.py
src/timestep/agents/petting_zoo_agent/: README.md  pyproject.toml
src/timestep/agents/petting_zoo_agent/src/timestep/agents/petting_zoo_agent/: agent.py
src/timestep/envs/no_limit_texas_holdem/: README.md  pyproject.toml
src/timestep/envs/no_limit_texas_holdem/src/timestep/envs/no_limit_texas_holdem/: env.py
src/timestep/envs/rock_paper_scissors/: README.md  pyproject.toml
src/timestep/envs/rock_paper_scissors/src/timestep/envs/rock_paper_scissors/: env.py
src/timestep/envs/rock_paper_scissors/tests/: test_env.py
src/timestep/platform/app/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
src/timestep/platform/app/app/: app.py  utils.py
src/timestep/platform/app/app/api/agents/: api_router.py
src/timestep/platform/app/app/api/assistants/: api_router.py
src/timestep/platform/app/app/api/bots/: slack.py
src/timestep/platform/app/app/api/services/: api_router.py
src/timestep/platform/app/app/api/services/ray_train/: requirements.txt
src/timestep/platform/app/app/bots/: slack.py
src/timestep/platform/server/: Dockerfile  main.py  pyproject.toml
src/timestep/platform/server/app/: context.py
src/timestep/platform/server/app/api/: accounts.py  agents.py  artifacts.py  chat.py  documents.py  tasks.py
src/timestep/platform/server/app/services/: accounts.py  agents.py  artifacts.py  utils.py
src/timestep/platform/server/app/workers/: workers
src/timestep/platform/server/app/workers/agents/agent/: agent.py  flow.py  requirements.txt  serve.py  serve.yaml
src/timestep/platform/server/app/workers/agents/gpt-4-vision-preview/: flow.py  serve.py  tools.py  utils.py
src/timestep/services/web/: .dockerignore  Dockerfile  pyproject.toml
src/timestep/services/web/service/: prefect.yaml
src/timestep/services/web/service/agents/ddpg-pendulum/: checkpoint_critic.pth  ddpg_agent.py  model.py
src/timestep/services/web/service/agents/ppo/: coding_ppo.ipynb
src/timestep/services/web/service/envs/gymnasium/: env.py
src/timestep/services/web/service/envs/wrappers/: env_spec.py
src/timestep/services/web/src/: BUILD  main.py
src/timestep/services/web/src/web/: main.py  server.py
src/timestep/services/web/src/web/api/: agent.py
src/timestep/services/web/src/web/api/routers/: acounts.py  agents.py  chat.py
src/timestep/services/web/src/web/app/: dependencies.py  main.py  main.py.bak
src/timestep/services/web/src/web/app/routers/: acounts.py  agent.py  (+4 more)
src/timestep/services/web/src/web/db/: env.py  task.py
src/timestep/services/web/src/web/flows/: buy.py
src/timestep/services/web/src/web/services/: accounts.py  agents.py  storage.py  user_index.py  users.py
src/timestep/services/web/src/web/utils/: index.py  json.py
(+1759 files in other folders)
