[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.flet]
# company name to display in about app dialogs
company = "Timestep"
# copyright text to display in about app dialogs
copyright = "Copyright (C) 2024 by Timestep"
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.timestep"
# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "timestep"

[tool.flet.app]
path = "src"

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Michael James Schock <m@mjschock.com>"]
description = "Timestep AI CLI - free, local-first, open-source AI"
license = "MIT"
name = "timestep"
packages = [{from = "src", include = "timestep"}]
readme = "README.md"
version = "13.0.0a18"

[tool.poetry.dependencies]
apache-libcloud = "^3.8.0"
asgi-lifespan = "^2.1.0"
connexion = {extras = ["swagger-ui", "uvicorn"], version = "^3.1.0"}
fastapi = "^0.115.6"
flet = "^0.25.2"
flet-web = "^0.25.2"
openai = "^1.57.4"
paramiko = "^3.5.0"
pydantic-settings = "^2.7.0"
python = "^3.10"
respx = "^0.21.1"
skypilot-nightly = {extras = ["aws", "kubernetes", "paperspace"], version = "^1.0.0.dev20241216"}
sqlmodel = "^0.0.22"
sse-starlette = "^2.1.2"
starlette-context = "^0.3.6"
typer = {extras = ["all"], version = "^0.15.1"}
uvicorn = "^0.34.0"
websockets = "^14.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
coverage = "^7.6.0"
flet = {extras = ["all"], version = "0.25.2"}
ipykernel = "^6.29.5"
isort = "^5.13.2"
locust = "^2.29.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-httpx = "^0.35.0"
pytest-order = "^1.2.1"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}
toml-sort = "^0.24.2"

[tool.poetry.scripts]
timestep = 'timestep.main:typer_app'

[tool.pytest.ini_options]
addopts = "--cov=timestep --cov-fail-under=17 --exitfirst -n logical --quiet -rA"
asyncio_mode = "auto"
minversion = "8.2.2"
pythonpath = [
  "src"
]
testpaths = [
  "tests"
]
usefixtures = [
  "client"
]
