[project]
name = "timestep"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "av>=14.4.0",
    "datasets>=3.6.0",
    "decord>=0.6.0",
    "num2words>=0.5.14",
    "pydantic>=2.11.7",
    "unsloth>=2025.6.5",
    "yt-dlp>=2025.6.9",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.isort]
profile = "black"
