[tool.poetry]
name = "timestep-agents-action-mask-agent"
version = "0.1.0"
description = ""
authors = ["Michael Schock <m@mjschock.com>"]
readme = "README.md"
packages = [{include = "timestep", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.173"
timestep-agents-petting-zoo-agent = "^0.1.0"

[tool.poetry.group.dev.dependencies]
timestep-agents-petting-zoo-agent = {path = "../petting_zoo_agent", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
