[tool.poetry]
name = "timestep-agents-gymnasium-agent"
version = "0.1.0"
description = ""
authors = ["Michael Schock <m@mjschock.com>"]
readme = "README.md"
packages = [{include = "timestep", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.0.173"
tenacity = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
