[tool.poetry]
name = "timestep-agents-petting-zoo-agent"
version = "0.1.0"
description = ""
authors = ["Michael Schock <m@mjschock.com>"]
readme = "README.md"
packages = [{include = "timestep", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
timestep-agents-gymnasium-agent = "^0.1.0"

[tool.poetry.group.dev.dependencies]
timestep-agents-gymnasium-agent = {path = "../gymnasium_agent", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
