[tool.poetry]
name = "timestep-envs-no-limit-texas-holdem"
version = "0.1.0"
description = ""
authors = ["Michael Schock <m@mjschock.com>"]
readme = "README.md"
packages = [{include = "timestep", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pettingzoo = {extras = ["classic"], version = "^1.23.0"}
langchain = "^0.0.173"
timestep-agents-action-mask-agent = "^0.1.0"

[tool.poetry.group.dev.dependencies]
timestep-agents-action-mask-agent = {path = "../../agents/action_mask_agent", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
