[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Michael James Schock <m@mjschock.com>"]
description = ""
license = "MIT"
name = "app"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
agent-protocol = {git = "https://github.com/Timestep-AI/agent-protocol.git", subdirectory = "packages/sdk/python"}
aiohttp = "^3.9.5"
litellm-proxy-api-client = {git = "https://github.com/Timestep-AI/litellm-proxy-api-client.git"}
open-gpts-api-client = {git = "https://github.com/Timestep-AI/open-gpts-api-client.git"}
openai = "^1.32.0"
pydantic = "^2.7.3"
python = ">=3.11,<3.13"
reflex = "^0.5.3"
skypilot-nightly = {extras = ["kubernetes", "paperspace"], version = "^1.0.0.dev20240529"}
slack-bolt = "^1.18.1"
sqlmodel = "^0.0.18"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.5"
toml-sort = "^0.23.1"
