[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Michael Schock <m@mjschock.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
